changed Integer.valueOf(int) which needs 1.5 to new Integer(int)
git-svn-id: file:///home/svn-repositories/biojava/biojava-live/trunk@3552 7c6358e6-4a41-0410-a743-a5b2a554c398